--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
+    "axios": "^0.19.2",
+    "highcharts": "^8.0.0",
+    "highcharts-react-official": "^2.2.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.1",
-    "styled-components": "4.0.2"
+    "styled-components": "^4.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
