--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lodash": "^4.17.15",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-highcharts": "^16.1.0",
     "react-scripts": "3.3.1",
     "styled-components": "^4.0.2"
   },
